tests/ui/borrowck/overwrite-anon-late-param-regions.stderr
error: lifetime may not live long enough
  --> $DIR/overwrite-anon-late-param-regions.rs:11:9
   |
LL |     |x| x
   |      -  ^ closure was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`
   |      |
   |      has type `(&str, &'1 str)`
   |      has type `(&'2 str, &str)`

error[E0792]: expected generic lifetime parameter, found `'a`
  --> $DIR/overwrite-anon-late-param-regions.rs:11:5
   |
LL | type Opaque2<'a> = impl Sized + 'a;
   |              -- this generic parameter must be used with a generic lifetime parameter
...
LL |     |x| x
   |     ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0792`.
